feat: image preview
