# apps/server/src/files/files.controller.ts
@@ -1,5 +1,4 @@
 import {
-  Body,
   Controller,
   Get,
   HttpException,
@@ -18,7 +17,6 @@ import { AuthGuard } from 'src/auth/auth.guard';
 import type { Request } from 'express';
 import { UploadFileResponseDto } from './dto/upload-file-response.dto';
 import { UserFilesResponseDto } from './dto/user-files-response.dto';
-import { GetUrlFileInputDto } from './dto/geturl-file-input.dto';
 
 @Controller('files')
 @UseGuards(AuthGuard)
@@ -71,24 +69,59 @@ export class FilesController {
     return this.filesService.uploadFile(files, req['user_id']);
   }
 
-  @Post('getblobs')
-  @ApiResponse({ status: 200, type: UserFilesResponseDto })
-  getBlobs(@Body() urls: GetUrlFileInputDto) {
-    return this.filesService.getBlobs(urls);
-  }
+  // @Post('getblobs')
+  // @ApiResponse({ status: 200, type: UserFilesResponseDto })
+  // getBlobs(@Body() urls: GetUrlFileInputDto) {
+  //   return this.filesService.getBlobs(urls);
+  // }
 
-  @Post('geturl')
-  @ApiResponse({ status: 200, type: UserFilesResponseDto })
-  getFiles(@Body() urls: GetUrlFileInputDto) {
-    return this.filesService.getFile(urls);
-  }
+  // @Post('geturl')
+  // @ApiResponse({ status: 200, type: UserFilesResponseDto })
+  // getFiles(@Body() urls: GetUrlFileInputDto) {
+  //   return this.filesService.getFile(urls);
+  // }
 
   @Get('user-files')
   @ApiResponse({ status: 200, type: UserFilesResponseDto })
-  getUserFiles(@Req() req: Request) {
+  async getUserFiles(@Req() req: Request): Promise<UserFilesResponseDto> {
     if (!req['user_id']) {
       throw new HttpException('Not found', HttpStatus.NOT_FOUND);
     }
-    return this.filesService.getUserFiles(req['user_id']);
+
+    const files = await this.filesService.getUserFiles(req['user_id']);
+    if (!files) {
+      throw new HttpException('Files not found', HttpStatus.NOT_FOUND);
+    }
+
+    const url = await this.filesService.getFile({
+      face_photo_key: files.face_photo_filepath,
+      thai_nationalid_copy_key: files.thai_nationalid_copy_filepath,
+      parent_permission_key: files.parent_permission_filepath,
+      p1_key: files.p1_filepath,
+      p7_key: files.p7_filepath,
+    });
+
+    return {
+      face_photo: {
+        name: files.face_photo_filepath,
+        url: url.face_photo_filepath,
+      },
+      thai_nationalid_copy: {
+        name: files.thai_nationalid_copy_filepath,
+        url: url.thai_nationalid_filepath,
+      },
+      parent_permission: {
+        name: files.parent_permission_filepath,
+        url: url.parent_permission_filepath,
+      },
+      p1: {
+        name: files.p1_filepath,
+        url: url.p1_filepath,
+      },
+      p7: {
+        name: files.p7_filepath,
+        url: url.p7_filepath,
+      },
+    };
   }
 }
